# quiccir

./: CMakeLists.txt  README.md
.github/workflows/: lit.yml
ci/docker/: Dockerfile  README.md
cmake/modules/: AddQuiccir.cmake  CMakeLists.txt  quiccirConfig.cmake.in
examples/: add-entry.mlir  alloc-lower-to-call-struct.mlir  alloc-lower-to-call-view.mlir  batched-bwd-standalone.mlir  batched-memref-bwd-standalone_gpu.mlir  jw-call-view.mlir  jw-call.mlir  jw-lower-to-lib-call-2ops.mlir  jw-lower-to-lib-call.mlir  linalg-generic-batched-matmul.mlir  lower-alloc_data.mlir  matmul-parallel-1d-test.mlir  matmul-parallel-1d.mlir  matmul_affine.mlir  matmul_affine_standalone.mlir  matmul_affine_standalone_gpu.mlir  matmul_affine_standalone_gpu_parallel1d.mlir  matmul_affine_standalone_gpu_parallel2d.mlir  matmul_tensor.mlir  proto.mlir  quiccirToLLVM.mlir  simple-1d-loop.mlir  simple-3d-loop.mlir  simple-tree.mlir  snippets.mlir  sparse_1D_standalone.mlir  sphereTC.mlir  tree-with-view.mlir  tree.mlir  wrap_batched_bwd.mlir  wrap_batched_call.mlir  wrap_batched_op.mlir
include/: CMakeLists.txt
include/Quiccir/: CMakeLists.txt  QuiccirDialect.h  QuiccirDialect.td  QuiccirOps.h  QuiccirOps.td  QuiccirPassDetail.h  QuiccirPasses.h  QuiccirPasses.td  QuiccirTypes.h  QuiccirTypes.td
include/Quiccir-c/: Dialects.h  Utils.h  Utils.hpp
include/Quiccir/IR/: CMakeLists.txt  QuiccirDialect.h  QuiccirDialect.td  QuiccirOps.h  QuiccirOps.td  QuiccirTypes.h  QuiccirTypes.td
include/Quiccir/Interfaces/: CMakeLists.txt  FoldTensorCastIntoConsumerOpInterface.h  FoldTensorCastIntoConsumerOpInterface.td  KindOpInterface.h  KindOpInterface.td  ShapeInferenceInterface.h  ShapeInferenceInterface.td  ShapeInferenceOpInterface.h  ShapeInferenceOpInterface.td  TransformOpInterface.h  TransformOpInterface.td
include/Quiccir/Pipelines/: Passes.h
include/Quiccir/Transforms/: CMakeLists.txt  QuiccirPassDetail.h  QuiccirPasses.h  QuiccirPasses.td  TypeConverter.h  Utils.h
lib/: CMakeLists.txt
lib/CAPI/: CMakeLists.txt  Dialects.cpp
lib/Quiccir/: .QuiccirLowerToAffine.cpp  .QuiccirLowerToGeneric.cpp  .QuiccirLowerToLinalg.cpp  CMakeLists.txt  QuiccirDialect.cpp  QuiccirFinalizeViewToLLVM.cpp  QuiccirLowerToCall.cpp  QuiccirOps.cpp  QuiccirTypes.cpp
lib/Quiccir/IR/: CMakeLists.txt  Canonicalization.cpp  QuiccirCanonicalization.cpp  QuiccirDialect.cpp  QuiccirOps.cpp  QuiccirTypes.cpp
lib/Quiccir/Pipelines/: CMakeLists.txt  Passes.cpp
lib/Quiccir/Transforms/: .QuiccirLowerToAffine.cpp  .QuiccirLowerToGeneric.cpp  .QuiccirLowerToLinalg.cpp  CMakeLists.txt  ConvertToLLVM.cpp  QuiccirFinalizeViewToLLVM.cpp  QuiccirLowerAlloc.cpp  QuiccirLowerToCall.cpp  QuiccirViewDeallocation.cpp  SetDimensions.cpp  SetImplptr.cpp  SetViewLayout.cpp  TransformContraction.cpp  TypeConverter.cpp  Utils.cpp  ViewWrapper.cpp
python/: CMakeLists.txt  QuiccirExtension.cpp
python/mlir_quiccir/dialects/: QuiccirOps.td  quiccir.py
quiccir-lib/: CMakeLists.txt
quiccir-miniapp/: .ninja_deps  .ninja_log  CMakeLists.txt  quiccir-miniapp.cpp
quiccir-opt/: CMakeLists.txt  quiccir-opt.cpp
quiccir-translate/: CMakeLists.txt  quiccir-translate.cpp
test/: CMakeLists.txt  lit.cfg.py  lit.site.cfg.py.in
test/CAPI/: CMakeLists.txt  quiccir-capi-test.c
test/Quiccir/: .bwd-affine.mlir  .bwd-inline.mlir  .bwd-linalg.mlir  .bwd-shape.mlir  .bwd-standalone.mlir  .quadrature-std.mlir  canonicalization.mlir  dealloc.mlir  dimensions.mlir  finalize-view.mlir  generic.mlir  layout.mlir  lower-alloc.mlir  lower-to-call-add-sub.mlir  lower-to-call-cross.mlir  lower-to-call-error.mlir  lower-to-call-nl.mlir  lower-to-call.mlir  pretty-asm.mlir  quadrature-asm.mlir  quadrature.mlir  quiccir-opt.mlir  quiccir-translate.mlir  set-implptr.mlir  shape-inference.mlir  transform-contraction.mlir  types.mlir  verify-dealloc.mlir  view-deallocation.mlir  wrapper.mlir
test/python/: smoketest.py
